--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li class="objets"><a href="index.html">Accueil</a></li>
                     <li class="objets">Catégories<span>&#9660;</span>
                         <ul class="sous-liste">
-                            <li class="objets-sous-liste"><a href="meilleurs films.html">Meilleurs-films</li></a>
+                            <li class="objets-sous-liste"><a href="meilleurs-films.html">Meilleurs-films</li></a>
                             <li class="objets-sous-liste"><a href="action.html">Action</li></a>
                             <li class="objets-sous-liste"><a href="aventure.html">Aventure</li></a>
                             <li class="objets-sous-liste"><a href="animation.html">Animation</li></a>                      
