sup '-' in 'Meilleurs-films'

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li class="objets"><a href="index.html">Accueil</a></li>
                     <li class="objets" id="categoriesButton">Catégories<span>&#9660;</span>
                         <ul class="sous-liste">
-                            <li class="objets-sous-liste" id="bestMoviesSelect"><p>Meilleurs-films</p></li>
+                            <li class="objets-sous-liste" id="bestMoviesSelect"><p>Meilleurs films</p></li>
                             <li class="objets-sous-liste" id="actionSelect"><p>Action</p></li>
                             <li class="objets-sous-liste" id="adventureSelect"><p>Aventure</p></li>
                             <li class="objets-sous-liste" id="animationSelect"><p>Animation</p></li>                      
